objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_NUM__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apartment_NUM__c</fullName>
        <label>Appartment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUseType_TXT__c</fullName>
        <label>Business Use Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM System</label>
        <referenceTo>CRM_System__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_NM__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ctype_TXT__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>Sales Manager/Internet Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Dealer Sales Admin</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DealerNumber_NUM__c</fullName>
        <formula>Account.DealerCode_CD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvergageEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageFilters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvergageFirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLink__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Acu)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Acu)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Acu)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Acu)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Acu)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Acu)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Acu)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Acu)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gender_TXT__c</fullName>
        <label>Gender</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelmsCRMEligible_FLAG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HELMS Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modifed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PhoneExtn_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Phone Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SequenceNumber_NUM__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubDiv_TXT__c</fullName>
        <label>SubDivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific (PST)</fullName>
                </value>
                <value>
                    <fullName>Mountain(MST)</fullName>
                </value>
                <value>
                    <fullName>Central (CST)</fullName>
                </value>
                <value>
                    <fullName>Eastern (EST)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor, Provider, Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts type</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ViewOpportunityScore_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>View Opportunity Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>Account.Contact_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Honda_Business</fullName>
        <active>true</active>
        <label>Honda Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Record_type</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.BypassAutomations__c.BypassValidationRule__c = false,NOT( ISBLANK(Account.RecordType.DeveloperName)) , Account.RecordType.DeveloperName &lt;&gt; RecordType.DeveloperName)</errorConditionFormula>
        <errorMessage>Please select Correct Record type.</errorMessage>
    </validationRules>
</CustomObject>